test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/Submodel/invalidModelType.json.exception
Expected the model type 'Submodel', but got aCompletelyInvalidModelType at: submodels[0].modelType